# plan-ai/backend/src/swagger/swagger.json
@@ -7644,7 +7644,7 @@
 	},
 	"info": {
 		"title": "backend",
-		"version": "4.2.9",
+		"version": "4.3.0",
 		"license": {
 			"name": "BUSL-1.1"
 		},
@@ -10059,6 +10059,14 @@
 					{
 						"in": "query",
 						"name": "sources",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "projectId",
 						"required": false,
 						"schema": {
 							"type": "string"
